- Added a mechanism to get urgent alerts from uApps
- Added a domain checker, this means more urls (e.g .xyz) is recognized as a web address instead of being google searched.
- Snow is now more performant
- The biggest architectural change since uSurf went to Swift 3 years ago! Better performance, better experience, way less bugs.
- Fixed the URL bars auto-correcting and made them a URL style

6.4.1:
- Snowfall is dynamic! Snow will show and disappear based on months, no more updating the app for snow!
- Native iOS 15 Support
- Note: App transparency - Google Ad Mob requests tracking to better serve ads to you but is completely optional and can be changed anytime in the settings. uApps does not track your data between apps. 

6.4:
- Support for iOS 14
- Snow is back for the cold weather seasons!
- Changed the image behind the blur in settings
- Changed the blur to be dark for a better effect in settings
- Made changes to have the info labels populate better and have no more "blank" info labels.
- Made changes to how the currently running label works making it less prone to showing... the wrong version.
- Small behind the scenes changes.

6.3.1:
- Removed snow.
- Removed festive icon
- Updated the background fetch for internet labels, this will result in less null labels and one less network call!

6.3:
- Added snow falling to the info screen! Happy Holidays!
- Making the uSurf icon a little more festive... 
- Fixed a bug on the iPhone where hitting privacy policy would open the sharesheet to share uSurf.

6.2:
- Updated the URL Bar to have a border around the text area when in light mode. 
- Updates the search bar: Search bars now conform to the theme selected in the app instead of just being black and white!
- Updates to the way that uSurf fetches information about the app. This will result in less network calls and more information.

6.1:
- Updated for iOS 13:
    - Dark / Light Themes have been replaced by "System" for iOS 13