@@ -8,6 +8,7 @@
 - Added a domain checker, this means more urls (e.g .xyz) is recognized as a web address instead of being google searched.
 - Snow is now more performant
 - The biggest architectural change since uSurf went to Swift 3 years ago! Better performance, better experience, way less bugs.
+- Swapped the "Cancel" and "Save" buttons when adding a bookmark to be better aligned with other iOS save alerts
 - Fixed the URL bars auto-correcting and made them a URL style
 
 6.4.1:
